src/components/explorer.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.grid {
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
  flex-direction: row;
}

.panel {
  border: #D0D0D0 2px solid;
  border-radius: 15px;
  padding: 10px;
  background-color: white;
}

.hSpacer {
  width: 10px;
}

.vSpacer {
  height: 30px;
}

.menu {
  min-width: 200px;
}

.colourSquare {
  width: 50px;
  height: 50px;
  margin: 4px;
  border-width: 2px;
  border-color: #B0B0B0;
  border-radius: 5px;
  border-style: solid;
}

.colourSquare:hover {
  border-width: 5px;
  margin: 1px;
}

.colourSquare.selected {
  border-width: 3px;
  margin: 3px;
}

.colourSquare.copyable {
  cursor: copy;
}

.status {
  height: 20px;
}

.menu {
  text-align: left;
  padding-left: 12px;
}

input {
  margin-left: 12px;
  margin-right: 12px;
}

